--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "defiPendulum": "node --import ./register-ts-node.mjs pendulum/withdrawFluidMorpho.ts",
+    "paraswap": "node --import ./register-ts-node.mjs pendulum/paraswap.ts",
     "test": "node --import ./register-ts-node.mjs utils/test.ts",
     "dangle": "node --import ./register-ts-node.mjs angle/depositAngle.ts",
     "wangle": "node --import ./register-ts-node.mjs angle/withdrawAngle.ts",
