--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "defipendulum",
+  "name": "dcabot",
   "private": true,
   "scripts": {
-    "run": "node --import ./register-ts-node.mjs pendulum/DCAbot.ts",
-    "withdraw": "node --import ./register-ts-node.mjs pendulum/withdrawFluidMorpho.ts",
-    "paraswap": "node --import ./register-ts-node.mjs pendulum/paraswap.ts",
+    "run": "node --import ./register-ts-node.mjs dcabot/DCAbot.ts",
+    "positions": "node --import ./register-ts-node.mjs dcabot/defiPositions/fluidPositions.ts",
+    "usdcbalance": "node --import ./register-ts-node.mjs dcabot/utils/usdcBalancesCheck.ts",
+    "withdraw": "node --import ./register-ts-node.mjs dcabot/withdrawFluidMorpho.ts",
+    "paraswap": "node --import ./register-ts-node.mjs dcabot/paraswap.ts",
     "test": "node --import ./register-ts-node.mjs utils/test.ts",
     "dangle": "node --import ./register-ts-node.mjs angle/depositAngle.ts",
     "wangle": "node --import ./register-ts-node.mjs angle/withdrawAngle.ts",
